--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     </ul>
                 </nav>
             </header>
+            <div class="center_inscription">
+                <h1>blow</h1>
+            </div>
 
             <div class="last_link">
                 <a href="#" target="_blank">explore work</a>
